objects/GBLite__GB_Global_Meta__c.object
<CustomObject>
    <fields>
        <fullName>GBLite__Controlling_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Controlling Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Grid_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grid Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Object_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Object_Dot_Field_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Dot Field Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Original_Record_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Record Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GBLite__Picklist_Meta__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Picklist Meta</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Retry</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBLite__Response_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Response Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grid</fullName>
                    <default>true</default>
                    <label>Grid</label>
                </value>
                <value>
                    <fullName>Tabbed Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBLite__Summary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GW1 Meta Request</fullName>
                </value>
                <value>
                    <fullName>GW2 Meta Request</fullName>
                </value>
                <value>
                    <fullName>Dependent Picklist</fullName>
                </value>
                <value>
                    <fullName>Record Type Picklist</fullName>
                </value>
                <value>
                    <fullName>Lookup Filter</fullName>
                </value>
                <value>
                    <fullName>Lookup Dialog Layout</fullName>
                </value>
                <value>
                    <fullName>Lookup Search Fields</fullName>
                </value>
                <value>
                    <fullName>No Meta Object</fullName>
                </value>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>VF Page Request</fullName>
                </value>
                <value>
                    <fullName>Tabbed Page</fullName>
                </value>
                <value>
                    <fullName>Custom Code - Global CSS</fullName>
                </value>
                <value>
                    <fullName>Custom Code - Global JavaScript</fullName>
                </value>
                <value>
                    <fullName>Custom Code - CSS</fullName>
                </value>
                <value>
                    <fullName>Custom Code - JavaScript</fullName>
                </value>
                <value>
                    <fullName>Theme - Global</fullName>
                </value>
                <value>
                    <fullName>Theme - Grid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GB Global Meta</label>
    <nameField>
        <displayFormat>GBM-{0000}</displayFormat>
        <label>GB Global Meta Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GB Global Meta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GBLite__Prevent_Update_of_Original_Record_Id</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(PRIORVALUE(GBLite__Original_Record_Id__c))), ISCHANGED(GBLite__Original_Record_Id__c),
OR(
ISPICKVAL(GBLite__Type__c, &quot;Action&quot;),
ISPICKVAL(GBLite__Type__c, &quot;Custom Code - Global CSS&quot;),
ISPICKVAL(GBLite__Type__c, &quot;Custom Code - Global JavaScript&quot;),
ISPICKVAL(GBLite__Type__c, &quot;Custom Code - CSS&quot;),
ISPICKVAL(GBLite__Type__c, &quot;Custom Code - JavaScript&quot;),
ISPICKVAL(GBLite__Type__c, &quot;Theme - Global&quot;),
ISPICKVAL(GBLite__Type__c, &quot;Theme - Grid&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>GBLite__Original_Record_Id__c</errorDisplayField>
        <errorMessage>You cannot edit the Original Record Id field.</errorMessage>
    </validationRules>
</CustomObject>